--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorAccent">#FF3D00</color>
+
+
+    <color name="colorWhite">#FFFFFF</color>
+
+    <color name="colorGreyText">#AAAAAA</color>
+
+
 </resources>
