--- a/app/src/main/res/color/tablayout_tab_background.xml
+++ b/app/src/main/res/color/tablayout_tab_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true" android:color="@color/colorSecondaryDark" />
-    <item  android:state_selected="false" android:color="@color/colorWhite"  />
-    <item  android:color="@color/colorWhite"  />
+    <item  android:state_selected="false" android:color="@android:color/transparent"  />
+    <item android:color="@android:color/transparent"  />
 </selector>
